--- a/index.html
+++ b/index.html
@@ -1,31 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Helpjuice - Marketing Page</title>
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
-    <!-- Bootstrap CSS  --> 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Custom CSS -->
-    <link href="css/main.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xl-2 col-lg-2">
+            <div class="logo">
+              <img src="img/logo.svg" height="32" alt="Helpjuice Logo">
+            </div><!--/.logo-->
+          </div><!-- /.col-xl-2 -->
+          <div class="col-xl-6 ml-xl-auto col-lg-6 ml-lg-auto">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Resources</a>
+              </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="#">On Premise</a>
+              </li>
+
+            </ul>
+          </div><!-- /.col-xl-6 -->
+          <div class="col-xl-3 ml-xl-auto col-lg-3 ml-lg-auto">
+            <div class="header-ctas">
+              <a class="btn signup-btn" href="#" role="button">Sign up</a>
+              <a class="btn demo-btn" href="#" role="button">Request a Demo</a>
+            </div><!-- /.header-ctas -->
+          </div><!-- /.col-xl-3 -->
+        </div><!--/.row-->
+      </div><!-- /.container-fluid-->
+    </header>
+
+    <section class="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h1>Get <span class="color-green">Fewer</span> Support <span class="color-green">Emails</span> & <span class="color-green">More</span> Happy <span class="color-green">Customers</span> </h1>
+            <p>
+              Easy-to-use knowledge base software that guarantees 50% less support emails <br>and more happy customers.
+            </p>
+            <a class="btn getstarted-btn" href="#" role="button">Get Started</a>
+          </div><!-- /.col-xl-8 -->
+        </div><!-- /.row -->
+
+      </div><!-- /.container -->
+    </section>
+    <div class="container">
+      <div class="app-screenshot">
+        <img src="img/app-screenshot.png" class="img-responsive" alt="Helpjuice Dashboard">
+      </div><!-- /.app-screenshot -->
+    </div><!-- /.container -->
+
+    <section class="what-is-helpjuice">
+      <div class="container">
+        <div class="col-xl-12">
+          <h3>WHAT IS HELPJUICE?</h3>
+          <h2>Auto-updating, Self-Serving and Instant-Delivering <br>Knowledge Base</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eleifend purus sem, at lobortis dui eleifend sed. Nam eu placerat diam, in consectetur augue. Fusce iaculis odio vel urna dictum, et volutpat ante sodales. Nunc eget aliquam est. Donec tincidunt sem at tincidunt mattis. Nam id egestas nisl.
+          </p>
+        </div><!-- /.col-xl-12 -->
+      </div><!-- /.container -->
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="circular-illustraion">
+              <img class="responsive-img" src="img/illustr-1.png" alt="Helpjuice Illustration">
+            </div><!-- /.circular-illustraion-->
+            <h4>Internal</h4>
+            <h5>Ideal for Employees</h5>
+            <p>
+              All knowledge is centralized in a single knowledge base allowing everyone within company or a department to know about its activity and content as much as everyone.
+            </p>
+          </div><!-- /.col-xl-4 -->
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="center-illustration">
+              <img src="img/knowledge-base-illustration.png" alt="knowledge base illustration" width="435">
+            </div><!-- /.center-illustration-->
+          </div><!-- /.col-xl-4 -->
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="circular-illustraion">
+              <img class="responsive-img" src="img/illustr-2.png" alt="Helpjuice Illustration">
+            </div><!-- /.circular-illustraion-->
+            <h4>External</h4>
+            <h5>Ideal for Customers</h5>
+            <p>
+              We allow your customers to self-serve themselves, and deliver instant answers to them, in a very customized fashion where the experience feels as if it were inhouse.
+            </p>
+          </div><!-- /.col-xl-4 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-4">
+            <div class="about-feature">
+              <div class="feature-img">
+                <img class="responsive-img" src="img/suitable-teams-a97c0874c4f85cca42078c4cf99c19b9c33b9d1402493cb1215e993cee67fa1c.png">
+              </div>
+              <h4>SUITABLE FOR (REMOTE) TEAMS</h4>
+              <p>
+                Invite people to work with you, set their permission and track their performance to know who are top knowledge base contributors and why.
+              </p>
+            </div>
+          </div><!-- /.col-xl-4 -->
+          <div class="col-xl-4">
+            <div class="about-feature">
+              <div class="feature-img">
+                <img class="responsive-img" src="img/customization-6664356d4444ad54122ae81d8660a1b493918e8fb4e88d065db9bed445efbce7.png">
+              </div>
+              <h4>PROFESSIONAL CUSTOMIZATION</h4>
+              <p>
+                Our group of rocket scientists (that's what we call our support reps) will help you get up and running with a pixel-perfect KB, customized to your taste.
+              </p>
+            </div>
+          </div><!-- /.col-xl-4 -->
+          <div class="col-xl-4">
+            <div class="about-feature">
+              <div class="feature-img">
+                <img class="responsive-img" src="img/easy-get-up-408f96ae7a4a12249cc32b57f48cd8bdbdab616915f2023863c4d91505352772.png">
+              </div>
+              <h4>EASY TO GET UP & RUNNING</h4>
+              <p>
+                Set up your Knowledge Base in minutes and set what goes public and what stays internal with a single click. No coding required.
+              </p>
+            </div>
+          </div><!-- /.col-xl-4 -->
+        </div><!-- /.row -->
+
+        <hr>
+
+        <div class="row">
+          <div class="col-xl-12">
+            <h3>On Premise Available</h3>
+            <h2>Hosted On Your Server Or On The Cloud</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eleifend purus sem, at lobortis dui eleifend sed. Nam eu placerat diam, in consectetur augue. Fusce iaculis odio vel urna dictum, et volutpat ante sodales. Nunc eget aliquam est. Donec tincidunt sem at tincidunt mattis. Nam id egestas nisl.
+            </p>
+          </div><!-- /.col-xl-12 -->
+        </div><!-- /.row -->
+
+        <div class="row">
+          <div class="col-xl-5">
+            <div class="on-premise">
+              <img class="centred" src="img/cloud-icon.png" height="140" width="140">
+              <h5>Cloud-Hosted</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eleifend purus sem, at lobortis dui eleifend sed. Nam eu placerat diam, in consectetur augue. Fusce iaculis odio vel urna dictum,
+              </p>
+              <a class="btn more-btn" href="#" role="button">Pricing Plans</a>
+            </div>
+          </div>
+          <div class="col-xl-2">
+            <div class="vertical-separator"></div>
+          </div>
+          <div class="col-xl-5">
+            <div class="on-premise">
+              <img class="centred" src="img/server-icon.png" height="140" width="140">
+              <h5>Self-Hosted</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eleifend purus sem, at lobortis dui eleifend sed. Nam eu placerat diam, in consectetur augue. Fusce iaculis odio vel urna dictum,
+              </p>
+              <a class="btn more-btn" href="#" role="button">Contact Us</a>
+            </div>
+        </div>
+
+
+      </div><!-- /.container -->
+      <hr>
+    </section><!-- /.what-is-helpjuice -->
+
+    <section class="our-clients">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12">
+          <h3>Our clients</h3>
+          <h2>They Trust Our Solutions</h2>
+          <p>
+              The easiest way to get your own knowledge base and keep your customers happy.
+          </p>
+          <img class="our-clients-img centred" src="img/our-clients.png" alt="our clients">
+        </div><!-- /.col-xl-12 -->
+      </div><!-- /.row -->
+    </div><!-- /.container -->
+    </section><!-- /.our-clients -->
+
+    <section class="testimonials">
+      
+    </section><!-- /.testimonials -->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
 </html>
