--- a/index.html
+++ b/index.html
@@ -208,9 +208,11 @@
 
     <section class="testimonials">
       <div class="container">
-        <p>
-          As someone who has used other knowledge bases before, I know what huge boom it can be on our product support team. With Helpjuice, we've already seen a boost of 86% reduction in support  calls even further.
-        </p>
+        <div class="testimonial-text">
+          <p>
+            As someone who has used other knowledge bases before, I know what huge boom it can be on our product support team. With Helpjuice, we've already seen a boost of 86% reduction in support  calls even further.
+          </p>
+        </div><!-- /.testimonial-text -->
         <div class="avatar">
           <img class="centred" src="img/testimonial-avatar.png" height="64">
           <h4>James F.</h4>
