join us section + footer base

--- a/index.html
+++ b/index.html
@@ -221,6 +221,34 @@
       </div><!-- /.container -->
     </section><!-- /.testimonials -->
 
+    <section class="join-us">
+      <div class="container">
+      <h3>Join Us</h3>
+      <h2>Create Your Own Knowledge Base</h2>
+      <p>
+        Easy-to-use knowledge base software that guarantees 50% less support emails and more happy customers.
+      </p>
+    </div><!-- /.container-->
+    <div class="container">
+      <form class="form-inline join-us-form justify-content-center">
+        <div class="form-group">
+          <label for="staticEmail2" class="sr-only">Email</label>
+          <input type="text" class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+        </div>
+        <button type="submit" class="btn btn-primary">Get Started</button>
+      </form>
+    </div><!-- /.container-->
+    </section><!-- /.join-us-->
+
+    <footer>
+      <section class="footer">
+        z
+      </section>
+      <section class="copyright">
+
+      </section>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
