progress on footer

--- a/index.html
+++ b/index.html
@@ -242,10 +242,45 @@
 
     <footer>
       <section class="footer">
-        z
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4">zj</div>
+            <div class="col-xl-2">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Help</a></li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <ul>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Free E-book</a></li>
+              </ul>
+            </div>
+            <div class="col-xl-2">
+              <ul>
+                <li><a href="#">Free KB Report</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Use</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="copyright">
-
+        <div class="container">
+          <div style="float: left">Made with Love from Miami, Bosnia, Morocco & Brazil</div>
+          <div style="float: right">Made with Love from Miami, Bosnia, Morocco & Brazil</div>
+        </div>
       </section>
     </footer>
 
