--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <form class="form-inline join-us-form justify-content-center">
         <div class="form-group">
           <label for="staticEmail2" class="sr-only">Email</label>
-          <input type="text" class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+          <input type="text" class="form-control-plaintext" id="staticEmail2" placeholder="email@example.com">
         </div>
         <button type="submit" class="btn btn-primary">Get Started</button>
       </form>
@@ -244,7 +244,13 @@
       <section class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-xl-4">zj</div>
+            <div class="col-xl-4">
+              <img src="img/helpjuice-icon.svg" height="40" width="40">
+              <h5>Copyright © 2017, Helpjuice Inc.</h5>
+              <p>Helpjuice, Inc. is a registered US Corporation, EIN # 45-2275731</br>
+                  <a href="https://helpjuice.com/helpjuice_w9.pdf" target="_blank">Download W9</a>
+                </p>
+            </div><!-- col-xl-4 -->
             <div class="col-xl-2">
               <ul>
                 <li><a href="#">Home</a></li>
@@ -278,9 +284,18 @@
       </section>
       <section class="copyright">
         <div class="container">
-          <div style="float: left">Made with Love from Miami, Bosnia, Morocco & Brazil</div>
-          <div style="float: right">Made with Love from Miami, Bosnia, Morocco & Brazil</div>
-        </div>
+          <div class="row">
+            <div class="col-xl-8">
+              Made with Love from Miami, Bosnia, Morocco & Brazil
+            </div><!-- /.col-xl-4-->
+            <div class="col-xl-2">
+              <span class="phone">+1 (800) 970 3029</span>
+            </div><!-- /.col-xl-8-->
+            <div class="col-xl-2">
+              <span class="email">support@helpjuice.com</span>
+            </div><!-- /.col-xl-8-->
+          </div><!-- /.row-->
+        </div><!-- /.container-->
       </section>
     </footer>
 
