--- a/index.html
+++ b/index.html
@@ -10,14 +10,60 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <a class="navbar-brand" href="#">
+        <img src="img/logo.svg" height="26" alt="Helpjuice Logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resources</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">On Premise</a>
+          </li>
+          <li class="button-li  hidden-lg-up" style="margin-top: 8px;">
+            <a class="nav-link signup-li-btn hidden-lg-up" href="#">Signup</a>
+          </li>
+          <li class="button-li" >
+            <a class="nav-link demo-li-btn hidden-lg-up" href="#">Request a Demo</a>
+          </li>
+
+        </ul>
+        <div class="header-ctas my-2 my-lg-0 hidden-md-down">
+          <a class="btn signup-btn hidden-md-down" href="#" role="button">Sign up</a>
+          <a class="btn demo-btn hidden-md-down" href="#" role="button">Request a Demo</a>
+        </div>
+
+      </div>
+    </nav>
+
+    <!--
     <header>
       <div class="container-fluid">
         <div class="row">
           <div class="col-xl-2 col-lg-2">
             <div class="logo">
               <img src="img/logo.svg" height="32" alt="Helpjuice Logo">
-            </div><!--/.logo-->
-          </div><!-- /.col-xl-2 -->
+            </div>
+          </div>
           <div class="col-xl-6 ml-xl-auto col-lg-6 ml-lg-auto">
             <ul class="nav">
               <li class="nav-item">
@@ -41,16 +87,16 @@
               </li>
 
             </ul>
-          </div><!-- /.col-xl-6 -->
+          </div>
           <div class="col-xl-3 ml-xl-auto col-lg-3 ml-lg-auto">
             <div class="header-ctas">
               <a class="btn signup-btn" href="#" role="button">Sign up</a>
               <a class="btn demo-btn" href="#" role="button">Request a Demo</a>
-            </div><!-- /.header-ctas -->
-          </div><!-- /.col-xl-3 -->
-        </div><!--/.row-->
-      </div><!-- /.container-fluid-->
-    </header>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>-->
 
     <section class="banner">
       <div class="container">
