--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div><!-- /.row -->
 
         <div class="row">
-          <div class="col-xl-5">
+          <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 col-xs-12">
             <div class="on-premise">
               <img class="centred" src="img/cloud-icon.png" height="140" width="140">
               <h5>Cloud-Hosted</h5>
@@ -218,10 +218,10 @@
               <a class="btn more-btn" href="#" role="button">Pricing Plans</a>
             </div>
           </div>
-          <div class="col-xl-2">
+          <div class="col-xl-2 col-lg-1 hidden-sm-down">
             <div class="vertical-separator"></div>
           </div>
-          <div class="col-xl-5">
+          <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 col-xs-12">
             <div class="on-premise">
               <img class="centred" src="img/server-icon.png" height="140" width="140">
               <h5>Self-Hosted</h5>
@@ -231,7 +231,6 @@
               <a class="btn more-btn" href="#" role="button">Contact Us</a>
             </div>
         </div>
-
 
       </div><!-- /.container -->
       <hr>
