progress on responsive features

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="about-feature">
               <div class="feature-img">
                 <img class="responsive-img" src="img/suitable-teams-a97c0874c4f85cca42078c4cf99c19b9c33b9d1402493cb1215e993cee67fa1c.png">
@@ -171,7 +171,7 @@
               </p>
             </div>
           </div><!-- /.col-xl-4 -->
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="about-feature">
               <div class="feature-img">
                 <img class="responsive-img" src="img/customization-6664356d4444ad54122ae81d8660a1b493918e8fb4e88d065db9bed445efbce7.png">
@@ -182,7 +182,7 @@
               </p>
             </div>
           </div><!-- /.col-xl-4 -->
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="about-feature">
               <div class="feature-img">
                 <img class="responsive-img" src="img/easy-get-up-408f96ae7a4a12249cc32b57f48cd8bdbdab616915f2023863c4d91505352772.png">
