page ready for review 2)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div><!-- /.row -->
 
         <div class="row">
-          <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 col-xs-12">
+          <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12">
             <div class="on-premise">
               <img class="centred" src="img/cloud-icon.png" height="140" width="140">
               <h5>Cloud-Hosted</h5>
@@ -218,10 +218,10 @@
               <a class="btn more-btn" href="#" role="button">Pricing Plans</a>
             </div>
           </div>
-          <div class="col-xl-2 col-lg-1 hidden-sm-down">
+          <div class="col-xl-2 col-lg-2 col-md-2 hidden-sm-down">
             <div class="vertical-separator"></div>
           </div>
-          <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 col-xs-12">
+          <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12">
             <div class="on-premise">
               <img class="centred" src="img/server-icon.png" height="140" width="140">
               <h5>Self-Hosted</h5>
@@ -276,7 +276,7 @@
     </div><!-- /.container-->
     <div class="container">
       <form class="form-inline join-us-form justify-content-center">
-        <div class="form-group">
+        <div class="form-group join-us-input">
           <label for="staticEmail2" class="sr-only">Email</label>
           <input type="text" class="form-control-plaintext" id="staticEmail2" placeholder="email@example.com">
         </div>
@@ -289,35 +289,35 @@
       <section class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <img src="img/helpjuice-icon.svg" height="40" width="40">
               <h5>Copyright © 2017, Helpjuice Inc.</h5>
               <p>Helpjuice, Inc. is a registered US Corporation, EIN # 45-2275731</br>
                   <a href="https://helpjuice.com/helpjuice_w9.pdf" target="_blank">Download W9</a>
                 </p>
             </div><!-- col-xl-4 -->
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
               <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Pricing</a></li>
               </ul>
             </div>
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
               <ul>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Customers</a></li>
                 <li><a href="#">Help</a></li>
               </ul>
             </div>
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Resources</a></li>
                 <li><a href="#">Free E-book</a></li>
               </ul>
             </div>
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
               <ul>
                 <li><a href="#">Free KB Report</a></li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -330,13 +330,13 @@
       <section class="copyright">
         <div class="container">
           <div class="row">
-            <div class="col-xl-8">
+            <div class="col-xl-8 col-lg-8 col-md-6 col-sm-12 col-xs-12">
               Made with Love from Miami, Bosnia, Morocco & Brazil
             </div><!-- /.col-xl-4-->
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-xs-6">
               <span class="phone">+1 (800) 970 3029</span>
             </div><!-- /.col-xl-8-->
-            <div class="col-xl-2">
+            <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-xs-6">
               <span class="email">support@helpjuice.com</span>
             </div><!-- /.col-xl-8-->
           </div><!-- /.row-->
